<?xml version="1.0"?>
<package>
  <name>description</name>
  <version>0.1.6</version>
  <description>
    3D model of the model for simulation and visualization
  </description>
  <license>Apache License 2.0</license>
  <author email="seungchul0406@gmail.com">Ha</author>
  <maintainer email="seungchul0406@gmail.com">Ha</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
