<?xml version="1.0"?>
<package format="2">
  <name>sim</name>
  <version>1.1.0</version>
  <description>
    Gazebo simulation package
  </description>
  <license>MLCS</license>
  <author email="seungchul0406@gmail.com">Ha</author>
  <maintainer email="seungchul0406@gmail.com">Ha</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
    <export>
    <gazebo_ros plugin_path="${prefix}/lib:${prefix}/models/autorace/gazebo_traffic_plugin" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models:${prefix}/models/autorace"/>
  </export>
</package>
