<?xml version="1.0"?>
<package format="2">
  <name>slam_navi</name>
  <version>0.1.6</version>
  <description>
    The model package provides roslaunch scripts for starting the SLAM
  </description>
  <license>MLCS</license>
  <author email="seungchul0406@gmail.com">Ha</author>
  <maintainer email="seungchul0406@gmail.com">Ha</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>gmapping</exec_depend>
</package>
