<?xml version="1.0"?>
<package>
  <name>teleop</name>
  <version>0.1.6</version>
  <description>
    Provides teleoperation using keyboard for model.
  </description>
  <author email="seungchul0406@gmail.com">Ha</author>
  <maintainer email="seungchul0406@gmail.com">Ha</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
